with-tls/rabbitmq/ingress.yaml
# Base source: rabbitmq/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "rabbit-cluster-rabbitmq"
  labels:
    app: rabbitmq
    chart: rabbitmq-2.2.0
    release: "rabbit-cluster"
  annotations:
    ingress.kubernetes.io/secure-backends: "true"
    certmanager.k8s.io/acme-challenge-type: "dns01"
    certmanager.k8s.io/acme-dns01-provider: "prod-clouddns"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - host: <YOUR_DOMAIN>
    http:
      paths:
        - path: /rabbit-management
          backend:
            serviceName: rabbit-cluster-rabbitmq
            servicePort: 15672
  tls:
  - hosts:
    - <YOUR_DOMAIN>
    secretName: rabbit-tls-prod
